# DubheCTF2024-solog

./: README.md
deploy/env/: Dockerfile
solog/: README.md
solog/env/: Dockerfile
solog/framework/: Cargo.toml  dev.sh  docker.sh
solog/framework-solve/: Cargo.toml
solog/framework-solve/src/: main.rs
solog/framework/chall/: Cargo.toml
solog/framework/chall/src/: dev.rs  entrypoint.rs  lib.rs  processor.rs
solog/framework/chall/src/instruction/: add_collaborator.rs  add_comment.rs  clap.rs  create_post.rs  edit_comment.rs  mod.rs
solog/framework/src/: main.rs
solution/: solution.md
solution/src/: main.rs
