[package]
name = "framework-solve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.7"

borsh = "1.3.1"
borsh-derive = "1.3.1"
solana-client = {version = "=1.18.1" }
solana-program = {version = "=1.18.1" }
solana-sdk = {version = "=1.18.1" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
rand = "0.8.5"